# breach

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs
src-tauri/src/commands/: gh.rs  mod.rs  notifications.rs  prune.rs  repos.rs  shell.rs  sync.rs  watcher.rs
src/components/: CleanModal.tsx  CloneMissingModal.tsx  DiffView.tsx  EmptyState.tsx  Modal.tsx  Onboarding.tsx  RepoCard.tsx  StaleBranchesModal.tsx  SyncAllModal.tsx  Tooltip.tsx  TopBar.tsx
src/components/settings/: RemoveButton.tsx  SettingsSection.tsx
src/lib/: api.ts  dashboard.test.ts  dashboard.ts  errors.test.ts  errors.ts  hooks.ts  onboarding.tsx  parseDiff.test.ts  parseDiff.ts  search.tsx  settings.test.ts  settings.ts  settingsIo.test.ts  settingsIo.ts  toast.tsx
src/pages/: Dashboard.tsx  RepoDetail.tsx  Settings.tsx
